# wasm-text-processor

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: publish.yml
src/: README.md  entity_extraction.rs  lib.rs  pattern_matching.rs  scoring.rs
