[package]
name = "affectively-text-processor"
version = "1.0.0"
authors = ["AFFECTIVELY <opensource@affectively.app>"]
edition = "2021"
license = "MIT"
description = "High-performance text processing utilities for WebAssembly - pattern matching, entity extraction, scoring"
repository = "https://github.com/affectively-ai/wasm-text-processor"
keywords = ["wasm", "text", "nlp", "pattern-matching", "entity-extraction"]
categories = ["text-processing", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "s"
